1998-11-20  Evan Lawrence <evan@worldpath.net>

	* gnome-app-helper.[ch]: Added a gnome_app_remove_menu_range
	  function, that allows you to specify a path to a menu to remove,
	  plus an offset from that menu to begin removing items at -
	  useful for recent documents in the file menu, see gEdit for
	  an example.

Fri Nov 20 00:24:00 1998  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-icon-list.c: fixed doc string after CVS conflict
	* gnome-about.c: added API docs

	Beginning of libgnomeui doc landing.

Thu Nov 19 20:37:10 1998  George Lebl  <jirka@5z.com>

	* gnome-file-entry.[ch]: added default paths and made modality
	  optional, also added a utility function for getting the
	  filename

1998-11-19  Havoc Pennington <hp@pobox.com>

	* gnome-appbar.h, gnome-appbar.c: Add a function to get at the
	GtkProgress.
	* gnome-preferences.c: Change dialog default to "center of
	screen," this emulates KDE and is nicer anyway. Change toolbar
	default to no button relief.

1998-11-19  Jonathan Blandford  <jrb@redhat.com>

	* gnome-popup-help.c (gnome_widget_add_help_with_uidata): we don't 
	actually want to not add help if we have no window, we just don't
	wan't to subscribe to events.

Wen Nov 18 1998  Tim Gerla   <timg@means.net>

        * gnome-uidefs.h: Fixed another bug. :P

Wed Nov 18 17:12:07 1998  Raph Levien  <raph@gimp.org>

	* Makefile.am: added links to libart_lgpl
	* gnome-canvas.c: minimal dependency on libart

Wen Nov 18 04:57 PM 1998  Tim Gerla   <timg@means.net>

        * gnome-uidefs.h: Fixed to really be GnomeUIInfo compatible.

Wen Nov 18 03:26 PM 1998  Tim Gerla   <timg@means.net>

        * gnome-uidefs.h: Added some keybindings.

1998-11-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-rect-ellipse.c (set_stipple): Only do
	gdk_gc_set_stipple if the stipple pixmap is not NULL.  Otherwise,
	just use gdk_gc_set_fill() to set the fill mode to GDK_SOLID.

	* gnome-canvas-line.c (set_stipple): Likewise.
